plots upd in thesis

--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -800,16 +800,16 @@
       
         \begin{figure}[H]
           \centering
-          \includegraphics[width=0.9\textwidth]{figs/sims/laplacian_field_etas.jpg}        
+          \includegraphics[width=1\textwidth]{figs/sims/laplacian_field_etas.png}         
           \caption{River networks in Laplacian field with different $\eta$ parameter value and bifurcation threshold equal to $0.5$.}
           \label{laplacian_etas}
-        \end{figure}
+        \end{figure} 
 
         Next, we present on Fig. \ref{laplacian_big_etas} similar growth as on Fig. \ref{laplacian_etas} but in a bigger qudrangle with width equal to $3$ and height -- $7$.
 
         \begin{figure}[H]
           \centering
-          \includegraphics[width=0.8\textwidth]{figs/sims/laplacian_big_field_etas.jpg}        
+          \includegraphics[width=0.83\textwidth]{figs/sims/laplacian_big_field_etas.png}        
           \caption{River networks in Laplacian field with different $\eta$ parameter value and bifurcation threshold equal to $0.5$.}
           \label{laplacian_big_etas}
         \end{figure}
@@ -820,36 +820,36 @@
 
         \begin{figure}[H]
           \centering
-          \includegraphics[width=0.75\textwidth]{figs/sims/poisson_field_etas.jpg}        
+          \includegraphics[width=0.83\textwidth]{figs/sims/poisson_field_etas.png}        
           \caption{River networks in Poisson field with different $\eta$ parameter value and bifurcation threshold equal to $0.5$.}
           \label{poisson_etas}
         \end{figure}
 
       \subsection{Histograms of branch lengths and Strahler numbers}
       
-        Here we present on Fig. \ref{laplacian_etas_analysis} length and Strahler number histogram for Fig. \ref{laplacian_etas}.
+        Here we present on Fig. \ref{laplacian_etas_analysis} length and Strahler number histogram for laplacian river networks shown in Fig. \ref{laplacian_etas}.
         
         \begin{figure}[H]
           \centering
-          \includegraphics[width=0.9\textwidth]{figs/sims/strahler_and_leght_histogram_for_laplacian_field.jpg}        
+          \includegraphics[width=1\textwidth]{figs/sims/strahler_and_leght_histogram_for_laplacian_field.png}        
           \caption{Branches lenght histogram and Strahler number histogram for river networks shown in Fig. \ref{laplacian_etas}}
           \label{laplacian_etas_analysis}
         \end{figure}
 
-        Next, we present on Fig. \ref{laplacian_big_etas_analysis} length and Strahler number histogram for Fig. \ref{laplacian_big_etas}.
+        Next, we present on Fig. \ref{laplacian_big_etas_analysis} length and Strahler number histogram of laplacian river networks on bigger domain shown in Fig. \ref{laplacian_big_etas}.
 
         \begin{figure}[H]
           \centering
-          \includegraphics[width=1\textwidth]{figs/sims/strahler_and_leght_histogram_for_laplacian_big_field.jpg}        
+          \includegraphics[width=1\textwidth]{figs/sims/strahler_and_leght_histogram_for_laplacian_big_field.png}        
           \caption{Branches lenght histogram and Strahler number histogram for river networks shown in Fig. \ref{laplacian_big_etas}}
           \label{laplacian_big_etas_analysis}
         \end{figure}
 
-        And here we present on Fig. \ref{poisson_etas_analysis} length and Strahler number histogram for Fig. \ref{poisson_etas}.
+        And here we present on Fig. \ref{poisson_etas_analysis} length and Strahler number histogram for poisson rivers networks shown in Fig. \ref{poisson_etas}.
 
         \begin{figure}[H]
           \centering
-          \includegraphics[width=0.9\textwidth]{figs/sims/strahler_and_leght_histogram_for_poisson_field.jpg}        
+          \includegraphics[width=1\textwidth]{figs/sims/strahler_and_leght_histogram_for_poisson_field.png}        
           \caption{Branches lenght histogram and Strahler number histogram for river networks shown in Fig. \ref{poisson_etas}}
           \label{poisson_etas_analysis}
         \end{figure}
