--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -787,7 +787,7 @@
 
       \begin{figure}[H]
         \centering
-        \includegraphics[width=1\textwidth]{figs/convergence.jpg}        
+        \includegraphics[width=1\textwidth]{figs/convergence.png}        
         \caption{Left plot shows how the relative error in percentage between evaluated and analitical value $a_1$ is converging. Right plot shows convergence when number of mesh elements are increased.}
         \label{convergence_new}
       \end{figure}
