sml upd in item list

--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -762,7 +762,7 @@
     \begin{itemize}
       \item Replacement of smooth network lines with discrete ones, followed by a reduction in the number of discretization points depending on the curvature;
       \item Discretization of the region into quadrilateral elements and the quadrature discretization degree in each element;
-      \item The number of elements of the sum for calculating the integral of the parameters around the spring. But it is known that in the limit of high descritization;
+      \item Series parameters integrals discretization;
       \item Split or combine selected cells to get a new grid.
     \end{itemize}
     
