--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -785,7 +785,7 @@
         \upsilon(H) = \sqrt{\frac{2}{\frac{\pi}{2}\coth(\frac{\pi}{2}H)}} \,.
       \end{equation} 
       
-      \noindent and is used for validation of the $a_1$ series parameter which is shown on Fig. \ref{convergence_new}. On the right plot we are changing $A_{min}$ parameter, used in mesh refinment formula \ref{mesh_ref_formula}, which controls mesh elements area around springs. For $A_{min} \sim 10^{-9}$, relative error is around $0.01\%$. On the left plot you can see convergence of numerical integral, for value of eps (see function arguments of qtrap above) below $0.4$ we are getting relative error of order $0.0003\%$.
+      \noindent and is used for validation of the $a_1$ series parameter which is shown on Fig. \ref{convergence_new}. On the right plot, we are changing $A_{min}$ parameter, used in mesh refinement formula \ref{mesh_ref_formula}, which controls mesh elements area around springs. For $A_{min} \sim 10^{-9}$, relative error is around $0.01\%$. On the left plot, you can see the convergence of numerical integral, for the value of eps (see function arguments of qtrap above) below $0.4$ we are getting a relative error of order $0.0003\%$.
 
       \begin{figure}[H]
         \centering
@@ -798,7 +798,7 @@
 
       \subsection{Laplacian field}
         
-        In Fig.\ref{laplacian_etas} we present the growth of complex networks in rectangular region with width equal to $1$ and height -- $5$. Boundary conditions are the same as shown on Fig.\ref{test_boundary}.
+        In Fig.\ref{laplacian_etas} we present the growth of complex networks in the rectangular region with a width equal to $1$ and height equal to $5$. Boundary conditions are the same as shown in Fig.\ref{test_boundary}.
       
         \begin{figure}[H]
           \centering
@@ -807,7 +807,7 @@
           \label{laplacian_etas}
         \end{figure} 
 
-        Next, we present on Fig.\ref{laplacian_big_etas} similar growth as on Fig.\ref{laplacian_etas} but in a bigger rectangle with width equal to $3$ and height -- $7$.
+        Next, we present in Fig.\ref{laplacian_big_etas} similar growth as in Fig.\ref{laplacian_etas} but in a bigger rectangle with a width equal to $3$ and height -- $7$.
 
         \begin{figure}[H]
           \centering
@@ -816,12 +816,12 @@
           \label{laplacian_big_etas}
         \end{figure}
 
-        When $\eta = 0$, as the result we are getting network with few bifurcations and long branches. With the positive values of $\eta > 0$ we get river network where springs with higher groundwater flux grow faster and springs with lower flux eventually stop the growth. With $\eta > 2$ competition between branches is even more visible and in the result we are getting one composite branch which tends to grow in the middle of region with short nongrowing side branches (Fig.\ref{laplacian_etas}). For bigger region Fig.\ref{laplacian_big_etas}, river network strucutre is similar but side branches are more developed for higher $\eta$ values. Because bigger region gets more groundwater and fluxes are higher.
+        When $\eta = 0$, as the result we are getting a network with few bifurcations and long branches. With the positive values of $\eta > 0$, we get a river network where springs with higher groundwater flux grow faster, and springs with lower flux eventually stop the growth. With $\eta > 2$ competition between branches is even more visible and as the result, we are getting one composite branch which tends to grow in the middle of the region with short nongrowing side branches (Fig.\ref{laplacian_etas}). For bigger region Fig.\ref{laplacian_big_etas}, river network structure is similar but side branches are more developed for higher $\eta$ values. Because bigger region gets more groundwater and fluxes are higher.
         \pagebreak
 
       \subsection{Poisson field}
         
-        In Fig.\ref{poisson_etas} we present the growth of complex networks in square region with side equal to $1.5$. Dirichlet boundary conditions $\phi = 0$ are applied on all faces.
+        In Fig.\ref{poisson_etas} we present the growth of complex networks in the square region with a side equal to $1.5$. Dirichlet boundary conditions $\phi = 0$ are applied on all faces.
 
         \begin{figure}[H]
           \centering
@@ -830,7 +830,7 @@
           \label{poisson_etas}
         \end{figure}
 
-        When $\eta = 0$, we have also constant growth as it was said for Laplacian case. This results in longer branches. With the higher values of $\eta$ network becomes more fragmented, more bifurcation occurs and river network more evenly is spreading over domain. Unlike in Laplacian field, in Poisson field source of groundwater is evenly distributed over domain.
+        When $\eta = 0$, we have also constant growth as was said for the Laplacian case. This results in longer branches. With the higher values of $\eta$ network becomes more fragmented, more bifurcation occurs and the river network more evenly is spreading over the domain. Unlike in the Laplacian field, in the Poisson field source of groundwater is evenly distributed over the domain.
 
       \subsection{Histograms of branch lengths and Strahler numbers}
       
@@ -843,9 +843,9 @@
           \label{laplacian_etas_analysis}
         \end{figure}
 
-        Strahler number of river network is numerical measure of its branching complexity. Each segment of a river within river network is treated as a node in a tree, with the next segment downstream as its parent. When two first-order streams come together, they form a second-order stream. When two second-order streams come together, they form a third-order stream. Streams of lower order joining a higher order stream do not change the order of the higher stream. Strahler numbers evaluate for Poisson river networks are presented on histograms plots in log scale (both axes). On the plots also are present fitted power law functions plots where you can see that power $k$ is varying from $-1.3$ to $-2.9$ and coefficient of proportionality $a$ -- from $42$ to $169$. River branch length histogram is to noisy to make it fit into power law distribution, so we provide histogram in linear scale without fitting. 
+        Strahler number of river networks is a numerical measure of its branching complexity. Each river segment within the river network is treated as a node in a tree, with the next segment downstream as its parent. When two first-order streams come together, they form a second-order stream. When two second-order streams come together, they form a third-order stream. Streams of lower order joining a higher order stream do not change the order of the higher stream. Strahler numbers evaluate for Poisson river networks are presented on histograms plots in log scale (both axes). On the plots also are present fitted power law functions plots where power $k$ is varying from $-1.3$ to $-2.9$ and coefficient of proportionality $a$ -- from $42$ to $169$. The river branch length histogram is too noisy to make it fit into power law distribution, so we provide a histogram in linear scale without fitting.
 
-        In Fig.\ref{laplacian_big_etas_analysis} we present length and Strahler number histograms of Laplacian river networks on bigger domain shown in Fig. \ref{laplacian_big_etas}:
+        In Fig.\ref{laplacian_big_etas_analysis} we present length and Strahler number histograms of Laplacian river networks on a bigger domain shown in Fig. \ref{laplacian_big_etas}:
 
         \begin{figure}[H]
           \centering
@@ -854,9 +854,9 @@
           \label{laplacian_big_etas_analysis}
         \end{figure}
 
-        For Fig.\ref{laplacian_big_etas_analysis} Strahler number distribution in log scale gives even better fit for power law. Parameter $k$ is in range from $-1.94$ to $-2.26$, and parameter $a$ -- from $112$ to $318$.
+        For Fig.\ref{laplacian_big_etas_analysis} Strahler number distribution in the log scale gives an even better fit for power law. Parameter $k$ is in range from $-1.94$ to $-2.26$, and parameter $a$ -- from $112$ to $318$.
 
-        And here we present on Fig.\ref{poisson_etas_analysis} length and Strahler number histograms for Poisson rivers networks shown in Fig. \ref{poisson_etas}:
+        And here we present in Fig.\ref{poisson_etas_analysis} length and Strahler number histograms for Poisson rivers networks shown in Fig. \ref{poisson_etas}:
 
         \begin{figure}[H]
           \centering
@@ -865,7 +865,7 @@
           \label{poisson_etas_analysis}
         \end{figure}
 
-        River networks grown in Poisson field gives best fits of power law for Strahler numbers distribution and leght distribution. For Strahler number distribution parameter $k$ is in range from $1.79$ to $2.38$. River branch lengths distribution gives next parameter $k$ after power law fitting values -- from $-1.16$ to $-1.8$.
+        River networks grown in the Poisson field give the best fits of the power law for Strahler numbers distribution and length distribution. For Strahler number distribution parameter $k$ is in the range from $-1.79$ to $-2.38$. River branch lengths distribution gives the next parameter $k$ after power law fitting values -- from $-1.16$ to $-1.8$.
 
 
   \chapter{Summary}
@@ -887,7 +887,7 @@
     \end{itemize}
 
     %Коротко показана верифікація бібліотеки Riversim, приклад програми для обрахування розвитку мережі і деякі резултати симуляцій.\par
-    The verification of the Riversim library, an example of a program for calculating the development of the network, simulations result in Laplacian and Poisson field for different $\eta$, branch length distribution and Strahler number distribution for different $\eta$. Distributions of branch lengths and Strahler numbers in river networks grown in Poisson field shows good fit to power law which is shown in Fig.\ref{poisson_etas_analysis}.\par
+    The verification of the Riversim library, an example of a program for calculating the development of the network, simulations result in Laplacian and Poisson fields for different $\eta$, branch length distribution, and Strahler number distribution for different $\eta$. Distributions of branch lengths and Strahler numbers in river networks grown in the Poisson field show a good fit to power law which is shown in Fig.\ref{poisson_etas_analysis}.\par
 
     \section*{Acknowledgements}
       
